--- a/style.scss
+++ b/style.scss
@@ -114,7 +114,9 @@ header {
 		margin-right: 2em;
 	}
 	& > span.brand {
-		font-family: "Source Sans Pro";
+		font-family: "Source Sans Pro", system-ui, -apple-system, BlinkMacSystemFont,
+			"Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+			"Helvetica Neue", sans-serif;
 		font-weight: 200;
 		font-size: 2em;
 		& > span.ej-bold {
@@ -129,7 +131,9 @@ header {
 
 main {
 	h1 {
-		font-family: "Archivo";
+		font-family: "Archivo", system-ui, -apple-system, BlinkMacSystemFont,
+			"Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+			"Helvetica Neue", sans-serif;
 		font-style: normal;
 		font-weight: 800;
 		font-size: max(6vw, 4em);
